# fastapi-mongo-books

./: README.md  TODO.md  dev.py  fastapi-mongo.mongodb.js  pyproject.toml  run.py  seed_books.py
app/: config.py  main.py
app/db/: client.py
app/db/CRUD/: base.py  rating.py  session.py  user.py
app/db/models/: base.py  book.py  rating.py  sessions.py  user.py
app/dto/: books.py  ratings.py  users.py
app/lib/: auth_utils.py  db_utils.py  url_utils.py
app/routers/: auth.py  books.py  ratings.py  users.py
frontend/: .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  config.ts  types.ts
frontend/src/api/: auth.ts  books.ts  client.ts  ratings.ts  users.ts
frontend/src/components/: AlertBox.tsx  Header.tsx  ModeToggle.tsx  NotFound.tsx  NotificationContainer.tsx  ProtectedRoute.tsx  UsersTable.tsx  index.tsx
frontend/src/components/buttons/: ActionButton.tsx  AddButton.tsx
frontend/src/components/forms/: BookForm.tsx  CheckboxColor.tsx  RegisterForm.tsx  UserForm.tsx  bookFormHelpers.ts
frontend/src/components/icons/: BookIcon.tsx
frontend/src/components/modals/: AddBookModal.tsx  AddUserModal.tsx  BaseModal.tsx  LoginModal.tsx  (+3 more)
frontend/src/context/: notificationContext.tsx  themeContext.tsx
frontend/src/hooks/: index.ts  useAddBook.ts  useAddRating.ts  useDebounce.tsx  useDeleteBook.ts  useDeleteUser.ts  useGetBooks.ts  useGetSingleBook.ts  useGetSingleUser.tsx  useGetUsers.tsx  useLogin.ts  useNotification.ts  useRegisterUser.tsx  useUpdateBook.ts  useUpsertUser.ts  useUser.ts
(+12 files in other folders)
