[project]
name = "fastapi-mongo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "beanie>=2.0.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
[project.scripts]
dev = "dev:main"

